Dark Mode Fixes + Minor Events Changes
- changed styles for light and dark mode slightly
- made source name for markov names box title case (was lowercase)
- small additions to events.json

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @media screen
 {
   /* dark mode */
-  .darkmode *
+  .darkmode, .darkmode *
   {
     background-color: #333;
     color: white;
@@ -35,6 +35,10 @@
 }
 @media print
 {
+  html, html *
+  {
+    background-color: white;
+  }
   /* hide buttons from print */
   button
   {
@@ -55,9 +59,14 @@
   height: 600px;
 }
 
+html
+{
+  background-color: #eee;
+}
+
 .incidents p
 {
-  background-color: #e0e0e0;
+  background-color: #ddd;
 }
 
 .incidents p b
